docs/tests/parser/structs/valid/StructNestedStruct.src
struct Outer {
    struct Inner {
        let int val;
    }
    let int x;
}
