docs/tests/parser/structs/invalid/StructMissingSemiAfterField.src
struct Foo {
    let int x
    let int y;
}
